# adpc

./: .gitignore  Adptrans.lhs  Algebras.lhs  Alggen.lhs  AlggenParse.ly  Alggen_cgi.lhs  Beautify.lhs  Bench.lhs  CGI.lhs  CGITools.lhs  CHANGELOG  Codegen.lhs  Codegen1.lhs  Compile.lhs  Compile_cgi.lhs  Constants.lhs  Convert.lhs  Core.lhs  CoreCodegen.lhs  CoreConstants.lhs  CoreParser.lhs  CorePrettyPrint.lhs  CoreSyntax.lhs  CoreTI.lhs  CoreTL.lhs  CoreTools.lhs  CoreTypeCheck.lhs  Depana.lhs  Doxyfile  Dss.lhs  Expr.lhs  FMPADP.lhs  IL2.lhs  INSTALL  Infix.hs  LatexRecs.lhs  LatexRecs_cgi.lhs  Lex.lhs  Lexer.lhs  Lift.lhs  (+44 more)
addons/: Makefile  RandSeq.lhs  RandSeqMain.lhs  adp-mode.el  c.head  convert.sh  hs.head  py.head
config/: Config.lhs  Makefile  distrib  install
hsutils/: HsLayoutPre.hs  HsLex.hs  HsLexUtils.hs  HsLexerPass1.hs  HsTokens.hs  L.hs  Layout.lhs  README
interfacer/: Adpc.lhs  Colecho.lhs  Makefile  Man2c.lhs  Man2lhs.lhs  Sed.lhs  interface.dtd
interfacer/examples/: ElMamun.input  ElMamun.lhs  ElMamun.xml  ElMamun_org.lhs  HEADER.lhs  HelloWorld.xml  RNAfold.lhs  RNAmangler.xml  Tdm.lhs  Tdm_org.lhs  allblocks.lhs  (+7 more)
interfacer/share/adpc/lib/distr/src/: Makefile.am
java/: FrontEnd.lhs  Helpers.lhs  Macro.lhs  Makefile  Option.lhs  build.xml  normal.tmpl  rna.sed  rna.tmpl  test.sed
testsuite/: Makefile  NOTES  README_perf  gnuplot.sh  perf.conf  perf2plot.py  test  test.conf  test.py  test_big.c  test_proc.c  test_sysext.c
typechecker/: Annotate.lhs  ElMamun.lhs  Makefile  TC.lhs  Typecheck.lhs  TypecheckMonad.lhs  TypecheckTree.lhs
(+318 files in other folders)
