bin_PROGRAMS = @PROJECT_NAME@
@PROJECT_NAME@_SOURCES = @PROJECT_NAME@.c @PROJECT_NAME@.h options.h \
                         @MAKE_ADPCMODULES_C@ \
                         adplib.c adplib.h @MAKE_RNALIB_SOURCES@
@PROJECT_NAME@_LDADD   = -lm
@PROJECT_NAME@_LDFLAGS = 

EXTRA_@PROJECT_NAME@_SOURCES =  @PROJECT_NAME@-man.c @MAKE_RNALIB_EXTRA_SOURCES@
